httpserver/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - meimeng.com
      secretName: meimeng-tls
  rules:
    - host: meimeng.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
